fixed banner overflow at < 1200px

--- a/css/style.css
+++ b/css/style.css
@@ -602,6 +602,11 @@ textarea {
     line-height: 80px;
     text-align: center;
 }
+@media (max-width:1200px) {
+    .site-name {
+        font-size:20px;
+    }
+}
 .site-name a {
 	color: #ffffff;
 }
